--- a/Test02/Views/PhongKho/DeleteCTKho.cshtml
+++ b/Test02/Views/PhongKho/DeleteCTKho.cshtml
@@ -68,7 +68,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Xóa vĩnh viễn" class="btn btn-danger" /> |
-            <a class="btn btn-danger btn-sm" href="QuanLyKho" title="Thêm">
+            <a class="btn btn-danger btn-sm" href="/PhongKho/QuanLyKho" title="Thêm">
                 <i class="fas fa-retweet"></i>
                 Trở lại danh sách kho
             </a>
