--- a/Test02/Views/PhongKho/XuatKho.cshtml
+++ b/Test02/Views/PhongKho/XuatKho.cshtml
@@ -15,22 +15,22 @@
         </a>
     </div>
 
-    <div class="col-sm-2">
+    @*<div class="col-sm-2">
         <a class="btn btn-delete btn-sm print-file" type="button" title="In" onclick="myApp.printTable()">
             <i class="fas fa-print"></i> In tất cả
         </a>
-    </div>
+    </div>*@
 
     <div class="col-sm-2">
         <a class="btn btn-delete btn-sm pdf-file" type="button" title="In" onclick="myFunction(this)">
             <i class="fas fa-file-pdf"></i> Xuất PDF
         </a>
     </div>
-    <div class="col-sm-2">
+    @*<div class="col-sm-2">
         <a class="btn btn-delete btn-sm" type="button" title="Xóa" onclick="myFunction(this)">
             <i class="fas fa-trash-alt"></i> Xóa tất cả
         </a>
-    </div>
+    </div>*@
 </div>
 
 <div class="row">
