--- a/Test02/Views/PhongKho/ChiTietPhieuXuatKho.cshtml
+++ b/Test02/Views/PhongKho/ChiTietPhieuXuatKho.cshtml
@@ -13,7 +13,7 @@
 
 <div class="row">
     <div class="col-md-12">
-        <div class="tile">
+        <div class="tile " id="printMe">
             <h2 style="text-align:center" id="sample1">PHIẾU ĐỀ NGHỊ XUẤT KHO</h2>
             <form style="text-align:center">
                 <label for="date">Ngày:</label>
@@ -28,7 +28,7 @@
                         @Session["kinhgui"]
                     </div>
                     <div class="form-group col-md-12" id="sample4">
-                        <label class="control-label">Xuất tại các kho: </label> <br />
+                        <label class="control-label">- Xuất tại các kho: </label> <br />
                         @for (int i = 0; i < dsCTKho.Count; i++)
                         {
                             if (dsCTKho[i].TinhTrang == "Tồn kho")
@@ -109,11 +109,21 @@
         <i class="fas fa-retweet"></i>
         Trở lại
     </a>
-    <a class="btn btn-danger btn-sm" href="/PhongKho/XoaPhieuXuatkho" title="Xóa">
-        <i class="fas fa-close"></i>
-        Xóa vĩnh viễn
-    </a>
-    <a class="btn btn-delete btn-sm print-file" type="button" title="In" onclick="myApp.printTable()">
+    <a class="btn btn-delete btn-sm print-file" type="button" title="In" onclick="printDiv('printMe')">
         <i class="fas fa-print"></i> In phiếu
     </a>
 </p>
+<script>
+    //In dữ liệu
+        function printDiv(divName){
+            var printContents = document.getElementById(divName).innerHTML;
+        var originalContents = document.body.innerHTML;
+
+        document.body.innerHTML = printContents;
+
+        window.print();
+
+        document.body.innerHTML = originalContents;
+
+        }
+</script>
