--- a/Test02/Views/PhongKho/CreateCTKho.cshtml
+++ b/Test02/Views/PhongKho/CreateCTKho.cshtml
@@ -27,17 +27,18 @@
         </div>
     </div>
     <div class="form-group">
-        @Html.LabelFor(model => model.NgayNhap, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.NgayNhap, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.LabelFor(model => model.NgayNhap, htmlAttributes: new { @class = "control-label col-md-2" })
+            <input class="form-control text-box single-line" data-val="true" data-val-date="The field NgayNhap must be a date." id="NgayNhap" name="NgayNhap" type="datetime-local" value="">
+            
             @Html.ValidationMessageFor(model => model.NgayNhap, "", new { @class = "text-danger" })
         </div>
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.NgayXuat, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.NgayXuat, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.LabelFor(model => model.NgayXuat, htmlAttributes: new { @class = "control-label col-md-2" })
+            <input class="form-control text-box single-line" data-val="true" data-val-date="The field NgayXuat must be a date." id="NgayXuat" name="NgayXuat" type="datetime-local" value="">
             @Html.ValidationMessageFor(model => model.NgayXuat, "", new { @class = "text-danger" })
         </div>
     </div>
