--- a/Test02/Views/PhongKho/QuanLyKho.cshtml
+++ b/Test02/Views/PhongKho/QuanLyKho.cshtml
@@ -5,9 +5,23 @@
     Layout = "~/Views/PhongKho/Layout/_LayoutPage1.cshtml";
     ViewBag.Name = "Danh sách kho";
     ViewBag.qlk = "active";
-    
-}
 
+}
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+@{ 
+    var checkMessage =(string) TempData["AlertMessage"];
+    if(checkMessage == "Đã xóa")
+    {
+        <script>
+            swal({
+                title: "Xóa thành công",
+                text: "Đã xóa chi tiết kho "@TempData["MaCTK"]"!",
+                icon: "success",
+                button: "OK",
+            });
+        </script>
+    }
+}
 
 <div class="row">
     <div class="col-lg-12">
@@ -66,43 +80,11 @@
 
 
 <script>
-    function deleteRow(r) {
-        var i = r.parentNode.parentNode.rowIndex;
-        document.getElementById("myTable").deleteRow(i);
-    }
-    jQuery(function () {
-        jQuery(".trash").click(function () {
-            swal({
-                title: "Cảnh báo",
-
-                text: "Bạn có chắc chắn là muốn xóa sản phẩm?",
-                buttons: ["Hủy bỏ", "Đồng ý"],
-            })
-                .then((willDelete) => {
-                    if (willDelete) {
-                        swal("Đã xóa thành công.!", {
-
-                        });
-                    }
-                });
-        });
-    });
     oTable = $('#sampleTable').dataTable();
     $('#all').click(function (e) {
         $('#sampleTable tbody :checkbox').prop('checked', $(this).is(':checked'));
         e.stopImmediatePropagation();
     });
-
-    //EXCEL
-    // $(document).ready(function () {
-    //   $('#').DataTable({
-
-    //     dom: 'Bfrtip',
-    //     "buttons": [
-    //       'excel'
-    //     ]
-    //   });
-    // });
 
     //In dữ liệu
     var myApp = new function () {
@@ -114,26 +96,5 @@
             win.print();
         }
     }
-    //     //Sao chép dữ liệu
-    //     var copyTextareaBtn = document.querySelector('.js-textareacopybtn');
 
-    // copyTextareaBtn.addEventListener('click', function(event) {
-    //   var copyTextarea = document.querySelector('.js-copytextarea');
-    //   copyTextarea.focus();
-    //   copyTextarea.select();
-
-    //   try {
-    //     var successful = document.execCommand('copy');
-    //     var msg = successful ? 'successful' : 'unsuccessful';
-    //     console.log('Copying text command was ' + msg);
-    //   } catch (err) {
-    //     console.log('Oops, unable to copy');
-    //   }
-    // });
-
-
-    //Modal
-    $("#show-emp").on("click", function () {
-        $("#ModalUP").modal({ backdrop: false, keyboard: false })
-    });
 </script>
